besser/BUML/notations/ocl/BOCLParser.py
# Generated from ./BOCL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BOCLParser ( Parser ):

    grammarFileName = "BOCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'context'", "'init'", "'inv'", "'pre'", 
                     "'post'", "'self'", "'if'", "'then'", "'else'", "'endif'", 
                     "'let'", "'in'", "'def'", "'and'", "'or'", "'not'", 
                     "'xor'", "'implies'", "'forAll'", "'exists'", "'select'", 
                     "'reject'", "'collect'", "'closure'", "'isUnique'", 
                     "'size'", "'isEmpty'", "'sum'", "'includes'", "'excludes'", 
                     "'including'", "'excluding'", "'union'", "'intersection'", 
                     "'first'", "'last'", "'prepend'", "'append'", "'allInstances'", 
                     "'subSequence'", "'subOrderedSet'", "'symmetricDifference'", 
                     "'oclIsTypeOf'", "'oclAsType'", "'oclIsKindOf'", "'asSet'", 
                     "'Boolean'", "'Integer'", "'Real'", "<INVALID>", "<INVALID>", 
                     "'Bag'", "'Sequence'", "'OrderedSet'", "<INVALID>", 
                     "'null'", "'::'", "<INVALID>", "'<>'", "'<='", "'>='", 
                     "'.'", "'('", "')'", "'{'", "'}'", "';'", "':'", "','", 
                     "'|'", "'<'", "'>'", "'='", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "CONTEXT", "INIT", "INV", "PRE", "POST", 
                      "SELF", "IF", "THEN", "ELSE", "ENDIF", "LET", "IN", 
                      "DEF", "AND", "OR", "NOT", "XOR", "IMPLIES", "FORALL", 
                      "EXISTS", "SELECT", "REJECT", "COLLECT", "CLOSURE", 
                      "ISUNIQUE", "SIZE", "ISEMPTY", "SUM", "INCLUDES", 
                      "EXCLUDES", "INCLUDING", "EXCLUDING", "UNION", "INTERSECTION", 
                      "FIRST", "LAST", "PREPEND", "APPEND", "ALLINSTANCES", 
                      "SUBSEQUENCE", "SUBORDEREDSET", "SYMMETRICDIFFERENCE", 
                      "OCLISTYPEOF", "OCLASTYPE", "OCLISKINDOF", "ASSET", 
                      "BOOLEAN_TYPE", "INTEGER_TYPE", "REAL_TYPE", "STRING_TYPE", 
                      "SET", "BAG", "SEQUENCE", "ORDEREDSET", "DATE", "NULL", 
                      "DOUBLECOLON", "ARROW", "NOTEQUAL", "LE", "GE", "DOT", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", "COLON", 
                      "COMMA", "PIPE", "LT", "GT", "EQUAL", "PLUS", "MINUS", 
                      "STAR", "DIVIDE", "BOOLEAN_LITERAL", "NUMBER", "STRING_LITERAL", 
                      "ID", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_oclFile = 0
    RULE_preCondition = 1
    RULE_postCondition = 2
    RULE_initConstraints = 3
    RULE_contextDeclaration = 4
    RULE_constraint = 5
    RULE_paramList = 6
    RULE_param = 7
    RULE_typeRef = 8
    RULE_primitiveType = 9
    RULE_collectionType = 10
    RULE_iteratorVarDecl = 11
    RULE_iteratorOp = 12
    RULE_compOp = 13
    RULE_argList = 14
    RULE_expression = 15
    RULE_primaryExpression = 16

    ruleNames =  [ "oclFile", "preCondition", "postCondition", "initConstraints", 
                   "contextDeclaration", "constraint", "paramList", "param", 
                   "typeRef", "primitiveType", "collectionType", "iteratorVarDecl", 
                   "iteratorOp", "compOp", "argList", "expression", "primaryExpression" ]

    EOF = Token.EOF
    CONTEXT=1
    INIT=2
    INV=3
    PRE=4
    POST=5
    SELF=6
    IF=7
    THEN=8
    ELSE=9
    ENDIF=10
    LET=11
    IN=12
    DEF=13
    AND=14
    OR=15
    NOT=16
    XOR=17
    IMPLIES=18
    FORALL=19
    EXISTS=20
    SELECT=21
    REJECT=22
    COLLECT=23
    CLOSURE=24
    ISUNIQUE=25
    SIZE=26
    ISEMPTY=27
    SUM=28
    INCLUDES=29
    EXCLUDES=30
    INCLUDING=31
    EXCLUDING=32
    UNION=33
    INTERSECTION=34
    FIRST=35
    LAST=36
    PREPEND=37
    APPEND=38
    ALLINSTANCES=39
    SUBSEQUENCE=40
    SUBORDEREDSET=41
    SYMMETRICDIFFERENCE=42
    OCLISTYPEOF=43
    OCLASTYPE=44
    OCLISKINDOF=45
    ASSET=46
    BOOLEAN_TYPE=47
    INTEGER_TYPE=48
    REAL_TYPE=49
    STRING_TYPE=50
    SET=51
    BAG=52
    SEQUENCE=53
    ORDEREDSET=54
    DATE=55
    NULL=56
    DOUBLECOLON=57
    ARROW=58
    NOTEQUAL=59
    LE=60
    GE=61
    DOT=62
    LPAREN=63
    RPAREN=64
    LBRACE=65
    RBRACE=66
    SEMI=67
    COLON=68
    COMMA=69
    PIPE=70
    LT=71
    GT=72
    EQUAL=73
    PLUS=74
    MINUS=75
    STAR=76
    DIVIDE=77
    BOOLEAN_LITERAL=78
    NUMBER=79
    STRING_LITERAL=80
    ID=81
    WS=82
    COMMENT=83
    LINE_COMMENT=84

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class OclFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contextDeclaration(self):
            return self.getTypedRuleContext(BOCLParser.ContextDeclarationContext,0)


        def EOF(self):
            return self.getToken(BOCLParser.EOF, 0)

        def initConstraints(self):
            return self.getTypedRuleContext(BOCLParser.InitConstraintsContext,0)


        def preCondition(self):
            return self.getTypedRuleContext(BOCLParser.PreConditionContext,0)


        def postCondition(self):
            return self.getTypedRuleContext(BOCLParser.PostConditionContext,0)


        def getRuleIndex(self):
            return BOCLParser.RULE_oclFile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOclFile" ):
                return visitor.visitOclFile(self)
            else:
                return visitor.visitChildren(self)




    def oclFile(self):

        localctx = BOCLParser.OclFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_oclFile)
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.contextDeclaration()
                self.state = 35
                self.match(BOCLParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.initConstraints()
                self.state = 38
                self.match(BOCLParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.preCondition()
                self.state = 41
                self.match(BOCLParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 43
                self.postCondition()
                self.state = 44
                self.match(BOCLParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(BOCLParser.CONTEXT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BOCLParser.ID)
            else:
                return self.getToken(BOCLParser.ID, i)

        def DOUBLECOLON(self):
            return self.getToken(BOCLParser.DOUBLECOLON, 0)

        def LPAREN(self):
            return self.getToken(BOCLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BOCLParser.RPAREN, 0)

        def PRE(self):
            return self.getToken(BOCLParser.PRE, 0)

        def COLON(self):
            return self.getToken(BOCLParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(BOCLParser.ExpressionContext,0)


        def paramList(self):
            return self.getTypedRuleContext(BOCLParser.ParamListContext,0)


        def getRuleIndex(self):
            return BOCLParser.RULE_preCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreCondition" ):
                return visitor.visitPreCondition(self)
            else:
                return visitor.visitChildren(self)




    def preCondition(self):

        localctx = BOCLParser.PreConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(BOCLParser.CONTEXT)
            self.state = 49
            self.match(BOCLParser.ID)
            self.state = 50
            self.match(BOCLParser.DOUBLECOLON)
            self.state = 51
            self.match(BOCLParser.ID)
            self.state = 52
            self.match(BOCLParser.LPAREN)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==68 or _la==81:
                self.state = 53
                self.paramList()


            self.state = 56
            self.match(BOCLParser.RPAREN)
            self.state = 57
            self.match(BOCLParser.PRE)
            self.state = 58
            self.match(BOCLParser.COLON)
            self.state = 59
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(BOCLParser.CONTEXT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BOCLParser.ID)
            else:
                return self.getToken(BOCLParser.ID, i)

        def DOUBLECOLON(self):
            return self.getToken(BOCLParser.DOUBLECOLON, 0)

        def LPAREN(self):
            return self.getToken(BOCLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BOCLParser.RPAREN, 0)

        def POST(self):
            return self.getToken(BOCLParser.POST, 0)

        def COLON(self):
            return self.getToken(BOCLParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(BOCLParser.ExpressionContext,0)


        def paramList(self):
            return self.getTypedRuleContext(BOCLParser.ParamListContext,0)


        def getRuleIndex(self):
            return BOCLParser.RULE_postCondition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostCondition" ):
                return visitor.visitPostCondition(self)
            else:
                return visitor.visitChildren(self)




    def postCondition(self):

        localctx = BOCLParser.PostConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_postCondition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(BOCLParser.CONTEXT)
            self.state = 62
            self.match(BOCLParser.ID)
            self.state = 63
            self.match(BOCLParser.DOUBLECOLON)
            self.state = 64
            self.match(BOCLParser.ID)
            self.state = 65
            self.match(BOCLParser.LPAREN)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==68 or _la==81:
                self.state = 66
                self.paramList()


            self.state = 69
            self.match(BOCLParser.RPAREN)
            self.state = 70
            self.match(BOCLParser.POST)
            self.state = 71
            self.match(BOCLParser.COLON)
            self.state = 72
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(BOCLParser.CONTEXT, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BOCLParser.ID)
            else:
                return self.getToken(BOCLParser.ID, i)

        def DOUBLECOLON(self):
            return self.getToken(BOCLParser.DOUBLECOLON, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BOCLParser.COLON)
            else:
                return self.getToken(BOCLParser.COLON, i)

        def typeRef(self):
            return self.getTypedRuleContext(BOCLParser.TypeRefContext,0)


        def INIT(self):
            return self.getToken(BOCLParser.INIT, 0)

        def expression(self):
            return self.getTypedRuleContext(BOCLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return BOCLParser.RULE_initConstraints

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitConstraints" ):
                return visitor.visitInitConstraints(self)
            else:
                return visitor.visitChildren(self)




    def initConstraints(self):

        localctx = BOCLParser.InitConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initConstraints)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(BOCLParser.CONTEXT)
            self.state = 75
            self.match(BOCLParser.ID)
            self.state = 76
            self.match(BOCLParser.DOUBLECOLON)
            self.state = 77
            self.match(BOCLParser.ID)
            self.state = 78
            self.match(BOCLParser.COLON)
            self.state = 79
            self.typeRef()
            self.state = 80
            self.match(BOCLParser.INIT)
            self.state = 81
            self.match(BOCLParser.COLON)
            self.state = 82
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT(self):
            return self.getToken(BOCLParser.CONTEXT, 0)

        def ID(self):
            return self.getToken(BOCLParser.ID, 0)

        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BOCLParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(BOCLParser.ConstraintContext,i)


        def getRuleIndex(self):
            return BOCLParser.RULE_contextDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextDeclaration" ):
                return visitor.visitContextDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def contextDeclaration(self):

        localctx = BOCLParser.ContextDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_contextDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(BOCLParser.CONTEXT)
            self.state = 85
            self.match(BOCLParser.ID)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.constraint()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INV(self):
            return self.getToken(BOCLParser.INV, 0)

        def COLON(self):
            return self.getToken(BOCLParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(BOCLParser.ExpressionContext,0)


        def ID(self):
            return self.getToken(BOCLParser.ID, 0)

        def SEMI(self):
            return self.getToken(BOCLParser.SEMI, 0)

        def getRuleIndex(self):
            return BOCLParser.RULE_constraint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = BOCLParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(BOCLParser.INV)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==81:
                self.state = 92
                self.match(BOCLParser.ID)


            self.state = 95
            self.match(BOCLParser.COLON)
            self.state = 96
            self.expression(0)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==67:
                self.state = 97
                self.match(BOCLParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BOCLParser.ParamContext)
            else:
                return self.getTypedRuleContext(BOCLParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BOCLParser.COMMA)
            else:
                return self.getToken(BOCLParser.COMMA, i)

        def getRuleIndex(self):
            return BOCLParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = BOCLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.param()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==69:
                self.state = 101
                self.match(BOCLParser.COMMA)
                self.state = 102
                self.param()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(BOCLParser.COLON, 0)

        def typeRef(self):
            return self.getTypedRuleContext(BOCLParser.TypeRefContext,0)


        def ID(self):
            return self.getToken(BOCLParser.ID, 0)

        def getRuleIndex(self):
            return BOCLParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = BOCLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==81:
                self.state = 108
                self.match(BOCLParser.ID)


            self.state = 111
            self.match(BOCLParser.COLON)
            self.state = 112
            self.typeRef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitiveType(self):
            return self.getTypedRuleContext(BOCLParser.PrimitiveTypeContext,0)


        def collectionType(self):
            return self.getTypedRuleContext(BOCLParser.CollectionTypeContext,0)


        def ID(self):
            return self.getToken(BOCLParser.ID, 0)

        def getRuleIndex(self):
            return BOCLParser.RULE_typeRef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeRef" ):
                return visitor.visitTypeRef(self)
            else:
                return visitor.visitChildren(self)




    def typeRef(self):

        localctx = BOCLParser.TypeRefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeRef)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [47, 48, 49, 50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.primitiveType()
                pass
            elif token in [51, 52, 53, 54]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.collectionType()
                pass
            elif token in [81]:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.match(BOCLParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN_TYPE(self):
            return self.getToken(BOCLParser.BOOLEAN_TYPE, 0)

        def INTEGER_TYPE(self):
            return self.getToken(BOCLParser.INTEGER_TYPE, 0)

        def REAL_TYPE(self):
            return self.getToken(BOCLParser.REAL_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(BOCLParser.STRING_TYPE, 0)

        def getRuleIndex(self):
            return BOCLParser.RULE_primitiveType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitiveType" ):
                return visitor.visitPrimitiveType(self)
            else:
                return visitor.visitChildren(self)




    def primitiveType(self):

        localctx = BOCLParser.PrimitiveTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_primitiveType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2111062325329920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CollectionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(BOCLParser.LT, 0)
